Wed May 16 14:05:33 UTC 2012  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * TAO_IDL/be/be_visitor_component/facet_exh.cpp:
        * TAO_IDL/be/be_visitor_component_scope.cpp:
        Changed DOxygen documentation.

Wed May 16 06:42:33 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/PortableGroup/Portable_Group_Map.cpp:
        * orbsvcs/orbsvcs/Sched/Scheduler.cpp:
        * orbsvcs/orbsvcs/Time/Timer_Helper.cpp:
          More cleanup due to removal of NSK

Tue May 15 18:17:07 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/ast/ast_expression.cpp:
        * TAO_IDL/ast/ast_union.cpp:
        * TAO_IDL/be/be_helper.cpp:
        * TAO_IDL/fe/y.tab.cpp:
        * TAO_IDL/include/ast_expression.h:
        * examples/RTCORBA/Activity/Task_Stats.inl:
        * examples/RTCORBA/Activity/Task_Stats.cpp:
        * examples/RTCORBA/Activity/Thread_Task.cpp:
        * orbsvcs/IFR_Service/ifr_adding_visitor.cpp:
        * orbsvcs/examples/Log/Basic/TLS_Client.cpp:
        * orbsvcs/examples/Log/Event/Event_Supplier.cpp:
        * orbsvcs/examples/Log/Notify/Notify_Supplier.cpp:
        * orbsvcs/examples/Log/RTEvent/RTEvent_Supplier.cpp:
        * orbsvcs/orbsvcs/IFRService/Container_i.cpp:
        * orbsvcs/orbsvcs/IFRService/UnionDef_i.cpp:
        * orbsvcs/orbsvcs/Log/Hash_LogRecordStore.cpp:
        * orbsvcs/orbsvcs/Log/Log_Constraint_Visitors.cpp:
        * orbsvcs/orbsvcs/Notify/Name_Value_Pair.cpp:
        * orbsvcs/orbsvcs/Notify/XML_Saver.cpp:
        * orbsvcs/orbsvcs/Time/Timer_Helper.cpp:
        * orbsvcs/orbsvcs/Time_Utilities.cpp:
        * orbsvcs/tests/AVStreams/Simple_Two_Stage/Receiver_Stats.inl:
        * orbsvcs/tests/AVStreams/Simple_Two_Stage/Receiver_Stats.cpp:
        * orbsvcs/tests/InterfaceRepo/IFR_Test/Admin_Client.cpp:
        * orbsvcs/tests/Log/Basic_Log_Test/Basic_Log_Test.cpp:
        * orbsvcs/tests/Notify/lib/Task_Stats.inl: